# FPT-CandC-

./: CMakeLists.txt  README.md
Exam/: Exam1.c  Exam2.c
Fnc/: bb1.c
OnClass/: atoz.c  caca.c  demo2.c  demo3.c  demo4.c  demo5.c  demo6.c  demo7_1.c  demo7_2.c  demo7_3.c  drink.c  stst.c  sumarr.c
OnClass/Func/: gradee.c  menucoff.c
OnClass/Func2/: bai1.c  bai2.c  bai3.c  bai4.c
OnClass/Loop/: bai1.c  bai2.c  bai3.c  bai4.c  bai5.c  bai6.c
OnClass/Prac/: bai 5.c  bai1.c  bai10.c  bai11.c  bai2.c  bai3.c  bai4.c  bai6.c  bai7.c  bai8.c  bai9.c
OnClass/Prac2/: balance.c  coffee.c  guess.c  tbc.c
OnClass/array/: bai1.c  bai2.c  bai3.c  bai4.c  bai5.c  bai6.c  bai7.c  bai8.c  baithem.c
OnClass/demo/: demo1.c  demo2.c  demo6.c
OnClass/ppt/: ppt1.c  ppt2.c  ppt3.c  ppt4.c  ppt5.c  ppt6.c  ppt7.c
Session 10/: (1)declare.c  (2)morepatenrt.c  (3)multiplicationtable.c  PartII.c  example1.c
Session 11/: (1)namearr.c  (2)vowles.c  (3)arrreverse.c  chary.c  example4.c  example6.c
Session 12/: (1)maxminarr.c  (2)consonants.c  Part2_12.c  summatrix.c
Session 13/: (1)palindrome.c  (2)names.c
Session 14/: (1)reversepointer.c  (2)matixpointer.c  Part2_14.c
Session 16/: (1)acircle.c  (2)factorial.c  Part2_16.c
Session 3/: (2)salary.c  Circle.c
Session 4/: (2)expression.c  (3)rectangle.c  (4)Cylinder.c  (5)NetSalary.c  NetSalary.c  sum3nums.c
Session 5/: (1)FindValue.c  (3)iResult.c  Precedence.c  floating.c
Session 6/: (1)printff.c  (2)ASCII.c  (4)exercise4-ss6.c  (5)lastfirst.c  Correct.c  Example1.c  Example2.c  printff.c
Session 7/: (1)divisible.c  (2)2product.c  (3)2nums.c  (4)grade.c  (5)StudentGrade.c  leapyear.c  product.c  uppertolower.c
Session 8/: (1)var.c  (2)capio.c  (3)values.c  Part2.c
Session 9/: (1)series.c  (2)accnum.c  (3)Fibonacci.c  (4)patterns.c  (5)stars.c
Session1/vidu0/: halo.c  sum.c  sumy.c
