cmake_minimum_required(VERSION 3.27)
project(FPT_CandC_ C)

set(CMAKE_C_STANDARD 11)

add_executable(FPT_CandC_
        Session1/vidu0/sum.c
        Session1/vidu0/sumy.c
        "Session 3/Circle.c"
        "Session 3/salary.c"
        "Session 4/sum3nums.c"
        "Session 4/rectangle.c"
        "Session 4/Cylinder.c"
        "Session 4/NetSalary.c"
        "Session 4/expression.c"
        "Session 5/Precedence.c"
        "Session 5/FindValue.c"
        "Session 5/floating.c"
        "Session 5/iResult.c"
        "Session 6/Example1.c"
        "Session 6/Example2.c"
        "Session 6/printff.c")
