cmake_minimum_required(VERSION 3.27)
project(FPT_CandC_ C)

set(CMAKE_C_STANDARD 11)

add_executable(FPT_CandC_
        Session1/vidu0/sum.c
        Session1/vidu0/sumy.c
        "Session 3/(1)Circle.c"
        "Session 3/(2)salary.c"
        "Session 4/(1)sum3nums.c"
        "Session 4/(3)rectangle.c"
        "Session 4/(4)Cylinder.c"
        "Session 4/(5)NetSalary.c"
        "Session 4/(2)expression.c"
        "Session 5/Precedence.c"
        "Session 5/(1)FindValue.c"
        "Session 5/(2)floating.c"
        "Session 5/(3)iResult.c"
        "Session 6/Example1.c"
        "Session 6/Example2.c"
        "Session 6/(1)printff.c"
        "Session 6/(2)ASCII.c"
        "Session 6/(3)Correct.c"
        OnClass/demo1.c
        OnClass/demo2.c
        OnClass/demo3.c
        OnClass/demo4.c
        OnClass/demo5.c
        OnClass/demo6.c
        "Session 6/(4)exercise4-ss6.c"
        "Session 6/(5)lastfirst.c"
        "Session 7/leapyear.c"
        "Session 7/uppertolower.c"
        "Session 7/product.c"
        "Session 7/(1)divisible.c"
        "Session 7/(2)2product.c"
        "Session 7/(3)2nums.c"
        "Session 7/(4)grade.c"
        "Session 7/(5)StudentGrade.c"
        "Session 8/Part2.c"
        "Session 8/(1)var.c"
        "Session 8/(2)capio.c")
