cmake_minimum_required(VERSION 3.27)
project(FPT_CandC_ C)

set(CMAKE_C_STANDARD 11)

add_executable(FPT_CandC_
        Session1/vidu0/sum.c
        Session1/vidu0/sumy.c
        "Session 3/(1)Circle.c"
        "Session 3/(2)salary.c"
        "Session 4/(1)sum3nums.c"
        "Session 4/(3)rectangle.c"
        "Session 4/(4)Cylinder.c"
        "Session 4/(5)NetSalary.c"
        "Session 4/(2)expression.c"
        "Session 5/Precedence.c"
        "Session 5/(1)FindValue.c"
        "Session 5/(2)floating.c"
        "Session 5/(3)iResult.c"
        "Session 6/Example1.c"
        "Session 6/Example2.c"
        "Session 6/(1)printff.c"
        "Session 6/(2)ASCII.c"
        "Session 6/(3)Correct.c"
        OnClass/demo/demo1.c
        OnClass/demo/demo2.c
        OnClass/demo/demo3.c
        OnClass/demo/demo4.c
        OnClass/demo/demo5.c
        OnClass/demo/demo6.c
        "Session 6/(4)exercise4-ss6.c"
        "Session 6/(5)lastfirst.c"
        "Session 7/leapyear.c"
        "Session 7/uppertolower.c"
        "Session 7/product.c"
        "Session 7/(1)divisible.c"
        "Session 7/(2)2product.c"
        "Session 7/(3)2nums.c"
        "Session 7/(4)grade.c"
        "Session 7/(5)StudentGrade.c"
        "Session 8/Part2.c"
        "Session 8/(1)var.c"
        "Session 8/(2)capio.c"
        "Session 8/(3)values.c"
        "Session 9/(1)series.c"
        "Session 9/(2)accnum.c"
        "Session 9/(3)Fibonacci.c"
        "Session 9/(4)patterns.c"
        "Session 9/(5)stars.c"
        "Session 10/example1.c"
        "Session 10/PartII.c"
        "Session 10/(1)declare.c"
        "Session 10/(2)morepatenrt.c"
        "Session 10/(3)multiplicationtable.c"
        "Session 11/chary.c"
        "Session 11/example4.c"
        "Session 11/example6.c"
        "Session 11/(1)namearr.c"
        "Session 11/(2)vowles.c"
        "Session 11/(3)arrreverse.c"
        OnClass/demo/demo7_1.c
        OnClass/demo/demo7_2.c
        OnClass/demo/demo7_3.c
        "Session 12/summatrix.c"
        "Session 12/Part2_12.c"
        "Session 12/(1)maxminarr.c"
        "Session 12/(2)consonants.c"
        OnClass/drink.c
        OnClass/Prac/bai1.c
        OnClass/Prac/bai2.c
        OnClass/Prac/bai3.c
        OnClass/Prac/bai4.c
        "OnClass/Prac/bai 5.c"
        OnClass/Prac/bai6.c
        OnClass/Prac/bai7.c
        OnClass/Prac/bai8.c
        OnClass/Prac/bai9.c
        OnClass/Prac/bai10.c
        OnClass/Prac/bai11.c
        "Session 13/(1)palindrome.c"
        OnClass/ppt/ppt1.c
        OnClass/ppt/ppt2.c
        OnClass/ppt/ppt3.c
        OnClass/ppt/ppt4.c
        OnClass/ppt/ppt5.c
        OnClass/ppt/ppt6.c
        OnClass/ppt/ppt7.c
        OnClass/Prac2/balance.c
        OnClass/Prac2/coffee.c
        OnClass/Prac2/guess.c
        OnClass/Prac2/tbc.c
        "Session 13/(2)names.c"
        OnClass/Loop/bai1.c
        OnClass/Loop/bai2.c
        OnClass/Loop/bai3.c
        OnClass/Loop/bai4.c
        OnClass/Loop/bai5.c
        OnClass/Loop/bai6.c
        "Session 14/Part2_14.c"
        "Session 14/(1)reversepointer.c"
        "Session 14/(2)matixpointer.c"
        OnClass/sumarr.c
        "Session 16/Part2_16.c"
        "Session 16/(1)acircle.c"
        "Session 16/(2)factorial.c"
        OnClass/atoz.c
        OnClass/array/bai1.c
        OnClass/array/bai2.c
        OnClass/array/bai3.c
        OnClass/array/bai4.c
        OnClass/array/bai5.c
        OnClass/array/bai6.c
)
